# cpp-project-structure

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
test/: CMakeLists.txt
test/include/: test.hpp
test/src/: test.cpp
