# SET MINIMUM VERSION OF CMAKE REQUIRED
cmake_minimum_required(VERSION 3.10)

# SET PROJECT NAME
# THIS PROJECT USES LANGUAGE C++
project("PROJECT_NAME_HERE" LANGUAGES CXX)

# BEING PLACED SOMEWHERE IN THE PRIMARY MEMORY, 
# EXECUTES PROPERLY REGARDLESS OF ITS ABSOLUTE ADDRESS.
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# IF THIS PROJECT SHOULD BE TESTED
option(SHOULD_TEST "Build the tests" ON)
if(SHOULD_TEST)
    enable_testing()
    # ADD SUBDIRECTORY IN ORDER TO USE TESTING FRAMEWORK
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
    # SET SRC_DIR AS ${CMAKE_CURRENT_SOURCE_DIR}/src
endif()

set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

# THIS PROJECT WILL MAKE EXECUTABLE FILE WITH NAME OF "EXECUTABLE_FILE_NAME_HERE"
set(EXE "EXECUTABLE_FILE_NAME_HERE")
add_executable(
    ${EXE}
    ${SRC_DIR}/main.cpp
    # LIST OTHER CPP FILES HERE
)

# EXECUTABLE FILE SHOULD BE COMPILED WITH HEARDER FILES IN /include
target_include_directories(
    ${EXE} # INCLUDE IN EXECUTABLE FILE
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
)

