# SET TEST_SRC_DIR AS ${CMAKE_CURRENT_SOURCE_DIR}/src
set(TEST_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")

# THIS PROJECT WILL MAKE EXECUTABLE FILE WITH NAME OF "TEST_EXECUTABLE_FILE_NAME_HERE"
set(TEST_EXE "TEST_EXECUTABLE_FILE_NAME_HERE")
add_executable(
    ${TEST_EXE}
    ${TEST_SRC_DIR}/test.cpp
    # LIST OTHER CPP FILES HERE
    # ${PROJECT_SOURCE_DIR}/src/CAN_USE_FILES_OF_MAIN_SRC.cpp
)

# EXECUTABLE FILE SHOULD BE COMPILED WITH HEARDER FILES IN /include
target_include_directories(
    ${TEST_EXE} 
    # INCLUDE HEADER FILES IN EXECUTABLE FILE 
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
    # INCLUDE HEADER FILES OF MAIN INCLUDE FOLDER
    PUBLIC ${PROJECT_SOURCE_DIR}/include
)

# USE GOOGLETEST AS TESTING FRAMEWORK
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/googletest)

# LINK LIBRARIES
target_link_libraries(
    ${TEST_EXE}
    gtest_main
    gmock_main
)